(test
  (name suite_alcotest)
  (package xapi)
  (flags (:standard -warn-error +a-3-4-6-9-27-28-29-52))
  (modules (:standard \
   test_daemon_manager 
   test_vdi_cbt 
   test_event 
   test_clustering 
   test_cluster_host 
   test_cluster 
   test_pusb 
   test_vdi_allowed_operations 
   test_vm_helpers 
   test_host_helpers 
   test_vlan 
   test_network_sriov 
   test_vm_placement))
  (libraries
    alcotest
    astring
    fmt
    xapi_internal
    xapi-stdext-date
    xapi-stdext-std
    xapi-stdext-threads
    xapi-stdext-unix
    xapi-test-utils
    tests_common
  )
  (preprocess (pps ppx_deriving_rpc ppx_sexp_conv))
  (deps (source_tree test_data))
  (action (run %{test} --color=always))
)

(tests
 (names test_pusb test_daemon_manager test_network_sriov test_vdi_cbt test_clustering)
 (package xapi)
 (modules test_pusb test_daemon_manager test_vdi_cbt test_event test_network_sriov test_vm_placement test_vm_helpers test_vdi_allowed_operations test_host_helpers test_vlan test_clustering test_cluster_host test_cluster)
 (libraries alcotest xapi_internal tests_common) 
)


(alias
  (name runtest)
  (package xapi)
  (deps
    (:x ../xapi/xapi_main.exe)
  )
  (action (run ./check-no-xenctrl %{x}))
)
